--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "cockatiel": "^0.1.5",
     "ioredis": "^4.16.3"
   },
   "devDependencies": {
