--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
     "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0"
   },
   "scripts": {
+    "coverage:unit": "nyc npm run test:unit",
+    "coverage:e2e": "nyc --no-clean npm run test:e2e",
+    "coverage:report": "nyc report --reporter=lcov --reporter=text",
+    "coverage": "npm run coverage:unit && npm run coverage:e2e && npm run coverage:report && tar -czvf coverage.tar.gz coverage",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "mocha --recursive --require ./tests/setup.js ./tests/unit",
     "test:e2e": "mocha --recursive --require ./tests/setup.js ./tests/e2e",
