chore(ci): lint commits in circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
           paths:
             - ./node_modules
       - run:
+          name: Lint Commits
+          command: npx commitlint-circle
+      - run:
           name: Lint Code
           command: npm run lint
       - run:
