--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "cockatiel": "^0.1.5",
-    "ioredis": "^4.16.3"
+    "cockatiel": "^0.1.5"
   },
   "devDependencies": {
+    "ioredis": "^4.16.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@ls-age/commitlint-circle": "^1.0.0",
