--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
+  "peerDependencies": {
+    "prom-client": "^12.0.0"
+  },
   "dependencies": {
     "bluebird": "^3.7.2",
     "cockatiel": "^0.1.5"
   },
   "devDependencies": {
-    "ioredis": "^4.16.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@ls-age/commitlint-circle": "^1.0.0",
@@ -17,8 +19,10 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
     "husky": "^4.2.5",
+    "ioredis": "^4.16.3",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
+    "prom-client": "^12.0.0",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0"
   },
