--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-cache",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "peerDependencies": {
     "prom-client": "^12.0.0"
   },
