--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 services:
   app:
     build: .
+    ports:
+      - 3000:3000
     depends_on:
       - redis
     volumes:
@@ -10,5 +12,7 @@ services:
 
   redis:
     image: redis:5-alpine
+    ports:
+      - 6379:6379
     volumes:
       - ./data/redis:/data
