--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
+    "express": "^4.17.1",
     "husky": "^4.2.5",
     "ioredis": "^4.16.3",
     "mocha": "^7.1.2",
