--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "simple-cache",
+  "name": "stable-cache",
   "version": "0.0.0",
-  "description": "",
+  "description": "A redis cache library, with producer resilience easily configurable",
   "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joao-fontenele/stable-cache.git"
+  },
+  "bugs": {
+    "url": "https://github.com/joao-fontenele/stable-cache/issues"
+  },
+  "homepage": "https://github.com/joao-fontenele/stable-cache",
   "peerDependencies": {
-    "prom-client": "^12.0.0"
+    "prom-client": ">= 9.x"
   },
   "dependencies": {
     "cockatiel": "^0.1.5"
@@ -37,7 +45,15 @@
     "test:e2e": "mocha --recursive --require ./tests/setup.js ./tests/e2e",
     "lint": "eslint --max-warnings 0 ."
   },
-  "keywords": [],
+  "keywords": [
+    "cache",
+    "redis",
+    "resilience",
+    "timeout",
+    "circuit breaker",
+    "retry",
+    "backoff"
+  ],
   "author": "joao-fontenele",
   "license": "MIT"
 }
