chore(ci): integrate with code climate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,17 @@ jobs:
           name: Run Tests
           command: npm run test
       - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            # download test reporter as a static binary
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+      - run:
           name: Run Test Coverage
-          command: npm run coverage
+          command: |
+            ./cc-test-reporter before-build
+            npm run coverage
+            ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
       - store_artifacts:
           path: coverage.tar.gz
 
