--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nyc": "^15.0.1",
     "prom-client": "^12.0.0",
     "sinon": "^8.1.1",
-    "sinon-chai": "^3.4.0"
+    "sinon-chai": "^3.4.0",
+    "standard-version": "^8.0.0"
   },
   "scripts": {
     "coverage:unit": "nyc npm run test:unit",
@@ -43,7 +44,8 @@
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "mocha --recursive --require ./tests/setup.js ./tests/unit",
     "test:e2e": "mocha --recursive --require ./tests/setup.js ./tests/e2e",
-    "lint": "eslint --max-warnings 0 ."
+    "lint": "eslint --max-warnings 0 .",
+    "release": "standard-version"
   },
   "keywords": [
     "cache",
