chore(npm): add files to package.json
this is a whitelist of files to publish to npm, and this change should reduce
the size of the package.

Also moved the examples folder outside of the lib folder

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
   },
   "overrides": [
     {
-      "files": ["lib/examples/**/*.js"],
+      "files": ["examples/**/*.js"],
       "rules": {
         "no-console": ["off"],
         "import/no-extraneous-dependencies": ["off"]
