--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "A redis cache library, with producer resilience easily configurable",
   "main": "lib/index.js",
+  "files": [
+    "/lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/joao-fontenele/stable-cache.git"
