refactor(tests): migrate tests to typescript

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,9 +1,10 @@
 {
+  "extends": "@istanbuljs/nyc-config-typescript",
   "all": true,
   "exclude": [
     "examples/**/*.js"
   ],
   "include": [
-    "lib/**/*.js"
+    "lib/**/*.ts"
   ]
 }
