--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@ls-age/commitlint-circle": "^1.0.0",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.6",
+    "@types/sinon": "^9.0.4",
+    "@types/sinon-chai": "^3.2.4",
     "bluebird": "^3.7.2",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
@@ -38,6 +44,7 @@
     "prom-client": "^12.0.0",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
+    "source-map-support": "^0.5.19",
     "standard-version": "^8.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
@@ -49,8 +56,8 @@
     "coverage:report": "nyc report --reporter=lcov --reporter=text",
     "coverage": "npm run coverage:unit && npm run coverage:e2e && npm run coverage:report && tar -czvf coverage.tar.gz coverage",
     "test": "npm run test:unit && npm run test:e2e",
-    "test:unit": "mocha --recursive --require ./tests/setup.js ./tests/unit",
-    "test:e2e": "mocha --recursive --require ./tests/setup.js ./tests/e2e",
+    "test:unit": "mocha --recursive --require ts-node/register --require source-map-support/register --require ./tests/setup.ts ./tests/unit/**/*.spec.ts",
+    "test:e2e": "mocha --recursive --require ts-node/register --require source-map-support/register --require ./tests/setup.ts ./tests/e2e/**/*.spec.ts",
     "lint": "eslint --max-warnings 0 .",
     "release": "standard-version"
   },
