--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/node": "^14.0.6",
     "@types/sinon": "^9.0.4",
     "@types/sinon-chai": "^3.2.4",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "bluebird": "^3.7.2",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
@@ -58,7 +60,7 @@
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "mocha --recursive --require ts-node/register --require source-map-support/register --require ./tests/setup.ts ./tests/unit/**/*.spec.ts",
     "test:e2e": "mocha --recursive --require ts-node/register --require source-map-support/register --require ./tests/setup.ts ./tests/e2e/**/*.spec.ts",
-    "lint": "eslint --max-warnings 0 .",
+    "lint": "eslint --max-warnings 0 --ext .js,.ts .",
     "release": "standard-version"
   },
   "keywords": [
